--- a/4/docker-compose.yml
+++ b/4/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - MARIADB_USER=bn_wordpress
       - MARIADB_DATABASE=bitnami_wordpress
-      - ALLOW_EMPTY_PASSWORD=yes
+      - ALLOW_EMPTY_PASSWORD=no
   wordpress:
     image: 'bitnami/wordpress-nginx:4'
     ports:
@@ -22,8 +22,9 @@ services:
       - MARIADB_HOST=mariadb
       - MARIADB_PORT_NUMBER=3306
       - WORDPRESS_DATABASE_USER=bn_wordpress
+      - WORDPRESS_DATABASE_PASS=danghungit85
       - WORDPRESS_DATABASE_NAME=bitnami_wordpress
-      - ALLOW_EMPTY_PASSWORD=yes
+      - ALLOW_EMPTY_PASSWORD=no
 volumes:
   mariadb_data:
     driver: local
