--- a/4-php5/Dockerfile
+++ b/4-php5/Dockerfile
@@ -14,7 +14,7 @@ ENV ALLOW_EMPTY_PASSWORD="no" \
     BITNAMI_IMAGE_VERSION="4.9.7-php5-debian-8-r7" \
     MARIADB_HOST="mariadb" \
     MARIADB_PORT_NUMBER="3306" \
-    MARIADB_ROOT_PASSWORD="" \
+    MARIADB_ROOT_PASSWORD="danghungit85" \
     MARIADB_ROOT_USER="root" \
     MYSQL_CLIENT_CREATE_DATABASE_NAME="" \
     MYSQL_CLIENT_CREATE_DATABASE_PASSWORD="" \
