--- a/4/docker-compose.yml
+++ b/4/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - MARIADB_USER=bn_wordpress
       - MARIADB_DATABASE=bitnami_wordpress
-      - ALLOW_EMPTY_PASSWORD=no
+      - ALLOW_EMPTY_PASSWORD=yes
   wordpress:
     image: 'bitnami/wordpress-nginx:4'
     ports:
@@ -24,7 +24,7 @@ services:
       - WORDPRESS_DATABASE_USER=bn_wordpress
       - WORDPRESS_DATABASE_PASS=danghungit85
       - WORDPRESS_DATABASE_NAME=bitnami_wordpress
-      - ALLOW_EMPTY_PASSWORD=no
+      - ALLOW_EMPTY_PASSWORD=yes
 volumes:
   mariadb_data:
     driver: local
